k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mesh
  name: mesh
spec:
  containers:
  - # image: hiroyukiosaki/graphql-mesh:v0.1.9
    image: hiroyukiosaki/graphql-mesh:latest-all
    name: mesh
    resources: {}
    command:
    - /bin/bash
    - -c
    - sh ./init.sh && yarn install && yarn start
    ports:
    - containerPort: 4000
    volumeMounts:
    - mountPath: /work/.meshrc.yaml
      name: meshrc-cm
      subPath: .meshrc.yaml
    - mountPath: /work/init.sh
      name: meshrc-cm
      subPath: init.sh
    - mountPath: /work/example-query.graphql
      name: meshrc-cm
      subPath: example-query.graphql
    - mountPath: /work/additional-resolvers.js
      name: meshrc-cm
      subPath: additional-resolvers.js
  - image: bitnami/kubectl:latest
    name: proxy
    ports:
    - containerPort: 8001
    command:
    - /bin/bash
    - -c
    - kubectl proxy --address 0.0.0.0 --accept-hosts='.*'
  volumes:
  - name: meshrc-cm
    configMap:
      name: meshrc-cm
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
