k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mesh-svc
  namespace: default
spec:
  selector:
    run: mesh
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      name: mesh2
    - protocol: TCP
      port: 8001
      targetPort: 8001
      name: proxy
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: otg
